--- a/_posts/2019-10-01-inktober.markdown
+++ b/_posts/2019-10-01-inktober.markdown
@@ -209,4 +209,41 @@ Here are four depictions of Tyrannosaurus showing how our understanding of this 
 3. In 2012, the discovery of Yutyrannus, a completely feathered yeti-esque tyrannosaur, caused paleoartists to start feathering basically all coelurosaurs, including The King, due to the principle of phylogenetic bracketing.  The hyper-realistic dinosaur simulator game _Saurian_ was no exception, creating a beautiful fluffy rex (though they’ve since updated their depiction again to reflect more current findings).  Some other important corrections between this depiction and the Dinosaur Renaissance one are the presence of lips that cover the teeth while the mouth is closed and hands that are oriented as if about to clap rather than pronated like a cat’s paws.
 4. Since 2012, more discoveries of Tyrannosaurus skin impressions show that it was probably entirely secondarily scaly, having lost its feathers as it got super-sized in order to better cool off.  Read more about this [here](http://markwitton-com.blogspot.com/2017/06/revenge-of-scaly-tyrannosaurus.html).
 
+### Day 16: Wild
+
+![inktober-16](/assets/inktober-16.jpg)
+
+Day 16: Wild - Araripesuchus.  Drawn in about an hour.
+ 
+Araripesuchus was a notosuchian crocodylian from Cretaceous South America.  Crocodylians are all semiaquatic ambush predators today, but in the past they were extremely diverse!  There were sail-backed, beaked herbivorous crocs like Lotosaurus; theropod-mimic crocs like Effigia; ankylosaur-mimic crocs like Desmatosuchus; the aptly-named Armadillosuchus; the cat-like Pakasuchus; the fully-aquatic Dakosaurus; the hoofed croc Boverisuchus; and Postosuchus, which looked like a quadrupedal Tyrannosaurus, to name just a few.  Crocodylians looked poised to take over the world in the Triassic period, but ended up taking a backseat when the dinosaurs rose to prominence.
+ 
+Araripesuchus was part of a group of terrestrial crocs called notosuchians, many of which had certain features that were very convergent with mammals.  These included heterodont dentition, or different types of teeth specialized for different purposes (molars versus incisors versus canines), and possibly external moveable ear-flaps, called **pinnae**.  Modern crocs’ ear-lids, which they use to prevent water from getting in their ears, may even have evolved from these mammal-like external ear structures!
+ 
+I picked Araripesuchus to be my “wild” both in the wild-animal sense that it gives off a kind of crazy fierceness, and in the “that’s wild” sense that it’s such a strange creature.  Here, I’ve depicted Araripesuchus as being very convergent with a wolf.  It came out a little unexpectedly Egyptian-looking (Anubis and Sobek had a baby?), but overall I’m happy with the composition.  It’s pretty speculative--Araripesuchus is pretty basal on the notosuchian family tree, and even if it did have pinnae, they may not have been this prominent--but I think the world needs more creative paleoart of weird pseudosuchians, since they’re such a cool group that’s relatively unknown to the public.  So here you go.
+ 
+[Notosuchian Ears](https://onlinelibrary.wiley.com/doi/full/10.1111/joa.12439)
+[Pose Reference](https://www.deviantart.com/pietro-ant/art/Araripesuchus-367508925)
+ 
+## Halfway there!
+ 
+I’d like to say a couple things now that we’re halfway through Inktober and I’ve gotten into the swing of things.  First, you can find me over on Reddit at r/Paleoart and r/Dinosaurs, making these same posts and also responding to other Redditors’ comments and feedback.  It’s been really cool seeing what people like and what they notice, and how my opinion of a piece and the amount of effort I put into it correlates (or doesn’t correlate) with number of upvotes.  Redditors in general have been very supportive.  The most-upvoted post so far was “Build” (Protoceratops), closely followed by “Mindless” (Ctenochasma).  I think people liked “Build” because it’s so cute and wholesome, even though it was relatively low-effort, and I think they liked “Mindless” because the black and white composition is striking.  But the ones I put the most work into were that and “Husky” (Olorotitan), which got hardly any upvotes.  I think also the day of the week and time of day of posting matters, but it’s hard to tell from this dataset.  Oh, and I can’t forget to mention the one other paleo Inktober Redditor I’ve befriended through this, u/jupiter1390.  He/she has been super encouraging and awesome, and his/her skeletal art is really cool.
+ 
+It’s been a couple years since I started getting super into dinosaurs and paleontology, but until now I haven’t really tried my hand seriously at paleoart, even though I’ve done other art (including animals, creature design, and video game fanart) for a long time.  I think this is because the barrier to entry to paleoart is pretty dang high, and only now, after researching and reading about dinosaurs sort of nonstop for two years, do I have enough background knowledge to make any meaningful contribution to paleoart.  When you draw a picture, you have to make assumptions about basically everything, since unlike text you can’t avoid mentioning a certain body part or feature or something, other than intentionally cropping it out.  Without detailed knowledge of a lot of different groups of prehistoric creatures, the assumptions I made when I attempted paleoart in the past were bad.  I could have done more research, but sometimes when you make assumptions, you don’t even realize you’re making them.  I’m really glad that I’m at a point now where I can bring ideas to the table--like giving Araripesuchus ears, or showing Ctenochasma in the act of fishing, or making Leaellynasaura the fluffiest thing ever--that haven’t really been done before, but are still founded in actual science.  It feels like I’m helping, in a tiny way, to advance the field.
+ 
+Two resources that I found really helpful in making better paleoart are _The Paleoartist’s Handbook_ by Mark Witton (and his [blog](http://markwitton-com.blogspot.com/), which is sort of an extension of that book), and _All Yesterdays_, by John Conway, Darren Naish, and CM Kosemen.  Both of those describe how we know what we know, how to avoid paleoart “memes” / just copying what other paleoartists are doing, give examples of well-executed parsimonious as well as speculative paleoart, and are just super beautiful to look at.
+ 
+I think the next hurdle in my paleoart career, now that I’ve become much more familiar with the paleo part, is, y’know, the art part.  That definitely just takes practice and straight-up hours spent drawing.  Hopefully if I continue doing things like this (Dinovember? Dinocember? Oh man that’s a bit daunting) I’ll get better.  I’ve learned that a lot of things in life are cumulative.
+ 
+Thanks for sticking with me through my first half of my first Inktober.  We’re over the hump and it’ll be easier from here on out.  Right?  Right??
+ 
+### Day 17: Ornament
+
+![inktober-17](/assets/inktober-17.jpg)
+
+Day 17: Ornament - Fabulous Fliers of the Romualdo Formation.  Drawn in about 3 hours.  I sort of bit off more than I wanted to chew with respect to the area that needed to be stippled.
+ 
+Thalassodromeus, Tupuxuara, Tropeognathus, and Tapejara were four pterodactyloid pterosaurs from Early Cretaceous Brazil.  Tropeognathus is part of the Ornithocheiridae, which were some of the last pterosaurs to have teeth, and is on the same branch of the pterosaur family tree as Pteranodon.  The other three were azhdarchoids; Thalassodromeus and Tupuxuara were closely related neoazhdarchids in the group Thalassodrominae, while Tapejara was in its own group named after it, the Tapejaromorpha (and Tapejaridae, Tapejarinae, and Tapejarini, in order of increasing closeness to Tapejara itself).
+ 
+All these fabulous-crested pterosaurs were found in the Romualdo Formation, but it’s difficult to tell if they actually coexisted, since the formation spans about 3 million years.  Originally I was just going to do Thalassodromeus for this prompt because its crest is one of the most extreme, but in my research I learned about its similarly-ornamented alliterative contemporaries and wanted to draw them all.  Also...calligraphy?
+
 [Inktober Prompts](https://twitter.com/inktober/status/1168394488181485568)
