--- a/_posts/2019-10-01-inktober.markdown
+++ b/_posts/2019-10-01-inktober.markdown
@@ -305,4 +305,66 @@ Effigia was a very strange crocodilian from Latest Triassic New Mexico.  It was 
  
 “Effigia” means “ghost” in Latin, referring both to its discovery at Ghost Ranch and its elusiveness, hiding amongst the Coelophysis.
 
+### Day 23: Ancient
+ 
+![inktober-23](/assets/inktober-23.jpg)
+
+Day 23: Ancient - Megafauna of the Ischigualasto Formation.  Drawn in about 3 hours.  This didn’t turn out how I imagined it at all....definitely not my best work.  But we persevere!
+ 
+In early Late Triassic Argentina, the age of dinosaurs was just beginning.  The previously dry Early and Middle Triassic climate gave way to monsoons and global warming in the Carnian Pluvial Event, which caused various extinctions and subsequent radiations of the survivors, including dinosaurs.  Herrerasaurus was one of the earliest undisputed true dinosaurs, and man is it classic.  Three fingers, three weight-bearing toes, medium-large, bitey, it sort of set a gold standard by which to compare other dinosaurs.
+ 
+Herrerasaurus shared its environment with the large terrestrial crocodilian Saurosuchus, and the giant beaked dicynodont (stem-mammal) Ischigualastia.  Altogether, the fauna of this period looked pretty alien compared to what we’re used to today.  These creatures are really, really ancient--this was 231 million years ago.  For scale, Tyrannosaurus lived 66 million years ago; Herrerasaurus is 3 times more ancient to Tyrannosaurus than Tyrannosaurus is to now!
+ 
+Here, a pack of Herrerasaurus chase a Saurosuchus away from an Ischigualastia carcass.  Are they defending their own kill, or stealing Saurosuchus’s?  One on one, Herrerasaurus would’ve been no match for Saurosuchus, but a mob of them is something Saurosuchus doesn’t want to risk getting involved with.  I’ve given Herrerasaurus some protofeathers because we now think it was the archosaurian ancestral condition, but not a lot of art currently reflects that.  (You know what else is rare in paleoart right now?  Dinosaurs and pseudosuchians from angles other than side view.)
+ 
+### Day 24: Dizzy
+
+![inktober-24](/assets/inktober-24.jpg)
+
+Day 24: Dizzy - Prenocephale.  Drawn in about 2 hours.
+ 
+Prenocephale was a pachycephalosaurid (dome-headed dinosaur) from Late Cretaceous Mongolia.  This was one of the last groups of dinosaurs to arise, and they were closely related to the ceratopsians (horned-faced dinosaurs).  They were small for dinosaurs, but Prenocephale adults still weighed around 300 lbs--the size of a bighorn sheep.  Prenocephale had a rounder dome and less auxiliary horns than its North American relative, Pachycephalosaurus, indicating that it may have used the dome differently--one study suggested Pachycephalosaurus could’ve been a “shover” like a bison, while Prenocephale would’ve been a “rammer” like a bighorn.  Pathologies (wounds) in the domes of adult specimens and not in juveniles show that the structures were probably used primarily for intraspecific sexual competition rather than defense or display.
+ 
+Have you ever seen a video of two bighorns ramming each other?  They rear up on their hind legs, charge forward, slam down, and then stand there for awhile.  Maybe they’re dizzy from the impact.  I’ve drawn my Prenocephale as being more muscular than it’s usually pictured, especially in the neck area--if they slammed downward like a bighorn, they’d need some heavy-duty neck muscles to resist the forces perpendicular to their spines.  Here, a young upstart bull Prenocephale (left) challenges a mature alpha bull (right) to a headbutting match.  I usually try not to fall back on paleoart memes and overdone poses, but this is such a dynamic one it was hard to pass up.
+ 
+[Stylistic Reference](https://www.deviantart.com/dustdevil/art/Acrocanthosaurus-atokensis-268997137)
+[Anatomy Reference](https://en.wikipedia.org/wiki/Prenocephale#/media/File:Prenocephale_bickering.jpg)
+[Headbutting Study](http://www.sci-news.com/paleontology/science-head-butting-dome-headed-dinosaurs-01247.html)
+ 
+### Day 25: Tasty
+
+![inktober-25](/assets/inktober-25.jpg)
+
+Day 25: Tasty - Nothronychus.  Drawn in about 40 minutes.
+ 
+Remember [this meme](https://imgur.com/gallery/c2ExZ)?  Here’s a recreation of it, but with a dinosaur!
+ 
+Nothronychus (meaning “sloth claw”) was a therizinosaur from Late Cretaceous North America, one of the family of beaked, herbivorous maniraptors with huge claws for stripping vegetation.  They’re one of the many groups of saurischians that switched from carnivory to herbivory / omnivory, alongside the sauropods, ornithomimosaurs, oviraptorosaurs, and various birds.  Why is going from carnivore to herbivore so common, while going the other way is so rare?  I couldn’t actually find any answers to this.  If you have any theories, let me know!
+ 
+[Reference](https://www.deviantart.com/stygimolochspinifer/art/31-Day-Palette-Challenge-Lingyuanosaurus-791817133)
+ 
+### Day 26: Dark
+
+![inktober-26](/assets/inktober-26.jpg)
+
+Day 26: Dark - Microraptor.  Drawn in about 90 minutes.
+ 
+Microraptor was a small, four-winged dromaeosaur from Early Cretaceous China known from over 300 specimens, some of which preserve lots of soft tissue, including feathers.  Melanosome (color-determining organelle) studies on the feathers have shown that Microraptor was iridescent black like a crow or grackle, and was thus probably diurnal (since iridescence isn’t useful at night).
+ 
+Did it fly, or just glide?  (Probably flew.)  Did it look like an X-wing or a biplane while doing so?  Did it live in trees?  (Probably not.)  Why do some specimens have two long tail feathers and others don’t?  A lot of research is going into these questions (a lot of research can be done given the ridiculous number of specimens available) but we don’t have super-confident answers yet.  As time goes on and more people attack the Microraptor specimens, we’ll probably learn a lot more about this animal’s lifestyle!
+ 
+Here, an itchy Microraptor preens itself atop a hoodoo-like rock.  I’m pretty sure there wasn’t any reason for hoodoos to be common in the Jehol ecosystem, but I wanted my Microraptor to show off its long tail without being in a tree.
+ 
+### Day 27: Coat
+
+![inktober-27](/assets/inktober-27.jpg)
+
+Day 27: Coat - Caihong.
+ 
+“Smokin’ hot hen behind you...don’t all look at once!!”
+ 
+Caihong (meaning “rainbow”) was a paravian dinosaur from Late Jurassic China.  Through melanosome studies, it’s one of the few dinosaurs we know the color of in detail--its throat, top of wings, and base of tail were some iridescent color in the manner of trumpeter birds, while its main wing feathers, legs, and tail were black.
+ 
+Similarly to trumpeters, my Caihong are a flock of ground-birds that just hang around shooting the breeze and making loud noises all day.  Unfortunately, my Caihong are also super ugly.  Oh well, they can't all be winners....
+
 [Inktober Prompts](https://twitter.com/inktober/status/1168394488181485568)
