--- a/_posts/2019-10-01-inktober.markdown
+++ b/_posts/2019-10-01-inktober.markdown
@@ -367,4 +367,47 @@ Caihong (meaning “rainbow”) was a paravian dinosaur from Late Jurassic China
  
 Similarly to trumpeters, my Caihong are a flock of ground-birds that just hang around shooting the breeze and making loud noises all day.  Unfortunately, my Caihong are also super ugly.  Oh well, they can't all be winners....
 
+### Day 28: Ride
+
+![inktober-28](/assets/inktober-28.jpg)
+
+Day 28: Ride - Suchomimus.  Drawn in about 30 minutes.
+
+Suchomimus (meaning “crocodile mimic”) was a spinosaurid from Early Cretaceous North Africa.  It was one of a family of fish-eating semi-aquatic apex predators, and one of the few non-avian dinosaurs adapted to a semi-aquatic lifestyle (the others are Lurdusaurus, Halszkaraptor, and Liaoningosaurus). Spinosaurids shared a number of features with modern semi-aquatic crocodiles, such as the elongated snout ending in a rosette, the conical fish-grabbing teeth, and the possible pressure-sensitive holes in the tip of the snout.  If they had all that in common, it’s not a bad guess that they shared behaviors as well.  Here, a Suchomimus mother gives three hatchlings a ride on her head.  That middle one looks a bit uncomfortable, no?
+
+### Day 29: Injured
+
+![inktober-29](/assets/inktober-29.jpg)
+
+Day 29: Injured - Stegosaurus.  Drawn in about an hour.
+
+In Late Jurassic Colorado, a Stegosaurus stenops sits down to nurse its injured thagomizer spike.  The spike broke off several months ago, and since then infection has set in, causing internal bone loss and a “melted candle wax” appearance.  Unbeknownst to this Stegosaurus, drought and forest fires will strike the area shortly, leaving so many animals dead that the scavengers aren’t able to keep up.  This weakened Stegosaurus will be one of the drought’s victims, and its carcass will later be buried mostly untouched by a flash flood when the drought breaks.  Then, hundreds of millions of years later, it will be dug up by curious primates, be given the label DMNH 2818, and have its story pieced back together.
+
+[Art Reference](https://www.deviantart.com/fredthedinosaurman/art/Dinosaur-Sketches-731805206)
+[Description of Fossil](https://books.google.com/books?id=CLEPeg_SjTcC&pg=PA128&lpg=PA128&dq=DMNH+2818&source=bl&ots=mpIhadp24L&sig=ACfU3U1uKvQ0G7efAl3dpSfEYMp-jct-0g&hl=en&sa=X&ved=2ahUKEwiNub_i35TlAhVGo54KHQnjCmIQ6AEwDHoECAgQAQ#v=onepage&q=DMNH%202818&f=false)
+
+### Day 30: Catch - Liaoningosaurus
+
+![inktober-30](/assets/inktober-30.jpg)
+
+Day 30: Catch - Liaoningosaurus.  Drawn in about 90 minutes.
+
+Another semiaquatic non-avian dinosaur today, the tiny ankylosaur Liaoningosaurus, from the Jehol Biota of Early Cretaceous China.  This little guy was only a bit over a foot long, and fossils of it were found with fish remains preserved in the gut.  It also has a pelvis that isn’t fused to the spine, numerous large fork-like teeth in its beak, and long sharp claws, all of which are possible adaptations to a semiaquatic lifestyle.
+
+Here, a Liaoningosaurus chases two Lycoptera, a type of fish that was very common in the Jehol Biota.  This is probably the aftermath of a failed ambush, and the dinosaur is now futilely swimming after the much faster fish.  It really looks like such a creature would never be able to nab a fish, but hey, snapping turtles do it somehow, and the fossil record doesn’t lie.
+
+### Day 31: Ripe
+
+![inktober-31](/assets/inktober-31.jpg)
+
+Day 31: Ripe - Acrocanthosaurus, rolling in something.  Drawn in about an hour.
+
+Acrocanthosaurus (meaning “high spine lizard”) was a carcharodontosaur from Early Cretaceous North America.  It was one of the “shark-toothed dinosaurs,” and was the apex predator of its ecosystem (it would be replaced by Tyrannosaurs a few tens of millions of years later).  Acrocanthosaurus is notable for its tall neural spines that probably supported a chunky ridge of muscle and fat along its back, sort of like a bison.
+
+Here, an Acrocanthosaurus rolls in a pile of stinky Ginkgo digitata false-fruit.  You may be familiar with the stench of Ginkgo bilboa, the only living species of Ginkgo tree, whose carrion-like musk attracts predators and scavengers to disperse the seeds.  The ripe false-fruits (they’re not true fruits because Ginkgo is a gymnosperm, not an angiosperm) tend to fall in big stinky piles, which looked and smelled like a lot of fun to this Acrocanthosaurus.
+
+I picked Acrocanthosaurus because (a) I haven’t done any allosauroids yet for Inktober (and Acrocanthosaurus is indisputably the coolest allosauroid), and (b) I wanted to show a stereotypical bloodthirsty carnivore interacting peacefully with plants, because it’s a thing that presumably happened all the time but is rarely shown in paleoart.
+
+[Paleobotany Inspiration](https://hummingdinosaur.wordpress.com/2014/09/21/fruit-for-dinosaurs-botany-for-paleoartists-part-ii/)
+
 [Inktober Prompts](https://twitter.com/inktober/status/1168394488181485568)
